<resources>
    <string name="app_name">Top News</string>
    <string name="topics">Explore Topic</string>
    <string name="icon">News Icon</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="gaming">Gaming</string>
    <string name="general">General</string>
    <string name="music">Music</string>
    <string name="science">Science</string>
    <string name="sport">Sport</string>
    <string name="technology">Technology</string>
    <string name="title_activity_business">BusinessActivity</string>
    <string name="title_activity_topics">TopicsActivity</string>
    <string name="title_activity_article">ArticlesActivity</string>
</resources>
